// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard matches snapshot with no accounts 1`] = `
"<BrowserRouter>
  <Router history={{...}}>
    <Provider store={{...}}>
      <Connect(WithStyles(DashboardComponent)) history={{...}}>
        <WithStyles(DashboardComponent) history={{...}} accounts={{...}} settings={{...}} totalBalance={0} dispatch={[Function: dispatch]}>
          <DashboardComponent classes={{...}} history={{...}} accounts={{...}} settings={{...}} totalBalance={0} dispatch={[Function: dispatch]}>
            <WithStyles(ForwardRef(Container))>
              <ForwardRef(Container) classes={{...}}>
                <div className=\\"MuiContainer-root MuiContainer-maxWidthLg\\">
                  <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-noAccountsPaper-5\\">
                    <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-noAccountsPaper-5\\">
                      <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-noAccountsPaper-5 MuiPaper-rounded\\">
                        <WithStyles(ForwardRef(Typography)) variant=\\"h6\\">
                          <ForwardRef(Typography) classes={{...}} variant=\\"h6\\">
                            <h6 className=\\"MuiTypography-root MuiTypography-h6\\">
                              You don&#39;t have any accounts yet.
                            </h6>
                          </ForwardRef(Typography)>
                        </WithStyles(ForwardRef(Typography))>
                        <WithStyles(ForwardRef(Button)) variant=\\"contained\\" color=\\"secondary\\" component={{...}} className=\\"DashboardComponent-newAccountButton-6\\">
                          <ForwardRef(Button) classes={{...}} variant=\\"contained\\" color=\\"secondary\\" component={{...}} className=\\"DashboardComponent-newAccountButton-6\\">
                            <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-contained MuiButton-containedSecondary DashboardComponent-newAccountButton-6\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                              <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-contained MuiButton-containedSecondary DashboardComponent-newAccountButton-6\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary DashboardComponent-newAccountButton-6\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                  <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary DashboardComponent-newAccountButton-6\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                    <LinkAnchor className=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary DashboardComponent-newAccountButton-6\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" navigate={[Function: navigate]}>
                                      <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary DashboardComponent-newAccountButton-6\\" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" onClick={[Function: onClick]}>
                                        <span className=\\"MuiButton-label\\">
                                          Add an account
                                        </span>
                                        <NoSsr>
                                          <WithStyles(undefined) center={false}>
                                            <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                              <span className=\\"MuiTouchRipple-root\\">
                                                <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                              </span>
                                            </ForwardRef(TouchRipple)>
                                          </WithStyles(undefined)>
                                        </NoSsr>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </ForwardRef>
                              </ForwardRef(ButtonBase)>
                            </WithStyles(ForwardRef(ButtonBase))>
                          </ForwardRef(Button)>
                        </WithStyles(ForwardRef(Button))>
                        <WithStyles(ForwardRef(Typography)) variant=\\"body1\\">
                          <ForwardRef(Typography) classes={{...}} variant=\\"body1\\">
                            <p className=\\"MuiTypography-root MuiTypography-body1\\">
                              You can keep track of all the accounts you have from any institution.
                            </p>
                          </ForwardRef(Typography)>
                        </WithStyles(ForwardRef(Typography))>
                      </div>
                    </ForwardRef(Paper)>
                  </WithStyles(ForwardRef(Paper))>
                </div>
              </ForwardRef(Container)>
            </WithStyles(ForwardRef(Container))>
          </DashboardComponent>
        </WithStyles(DashboardComponent)>
      </Connect(WithStyles(DashboardComponent))>
    </Provider>
  </Router>
</BrowserRouter>"
`;

exports[`Dashboard matches snapshot with one account 1`] = `
"<BrowserRouter>
  <Router history={{...}}>
    <Provider store={{...}}>
      <Connect(WithStyles(DashboardComponent)) history={{...}}>
        <WithStyles(DashboardComponent) history={{...}} accounts={{...}} settings={{...}} totalBalance={1000} dispatch={[Function: dispatch]}>
          <DashboardComponent classes={{...}} history={{...}} accounts={{...}} settings={{...}} totalBalance={1000} dispatch={[Function: dispatch]}>
            <WithStyles(ForwardRef(Container))>
              <ForwardRef(Container) classes={{...}}>
                <div className=\\"MuiContainer-root MuiContainer-maxWidthLg\\">
                  <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                    <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                      <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                                <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                                    <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                        <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                          Total
                                        </p>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                        <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                          €1,000.00
                                        </h5>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                          <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                            <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                              <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                                <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                  <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                                </svg>
                                              </ForwardRef(SvgIcon)>
                                            </WithStyles(ForwardRef(SvgIcon))>
                                          </ForwardRef>
                                        </div>
                                      </ForwardRef(Paper)>
                                    </WithStyles(ForwardRef(Paper))>
                                  </div>
                                </ForwardRef(Paper)>
                              </WithStyles(ForwardRef(Paper))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                                <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={4}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={4}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4\\" />
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={4}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={4}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4\\">
                                          <withRouter(AccountsTable) filter=\\"Assets\\">
                                            <AccountsTable filter=\\"Assets\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-224\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-224\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-224 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-225\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-225\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-225 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Assets
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €0.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <div className=\\"makeStyles-newAccountButton-233\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <LinkAnchor className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" navigate={[Function: navigate]}>
                                                                    <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" onClick={[Function: onClick]}>
                                                                      <span className=\\"MuiButton-label\\">
                                                                        New account
                                                                      </span>
                                                                      <NoSsr>
                                                                        <WithStyles(undefined) center={false}>
                                                                          <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                            <span className=\\"MuiTouchRipple-root\\">
                                                                              <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                            </span>
                                                                          </ForwardRef(TouchRipple)>
                                                                        </WithStyles(undefined)>
                                                                      </NoSsr>
                                                                    </a>
                                                                  </LinkAnchor>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={4}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={4}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4\\">
                                          <withRouter(AccountsTable) filter=\\"Liabilities\\">
                                            <AccountsTable filter=\\"Liabilities\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-224\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-224\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-224 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-225\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-225\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-225 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Liabilities
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €0.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <div className=\\"makeStyles-newAccountButton-233\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <LinkAnchor className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" navigate={[Function: navigate]}>
                                                                    <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" onClick={[Function: onClick]}>
                                                                      <span className=\\"MuiButton-label\\">
                                                                        New account
                                                                      </span>
                                                                      <NoSsr>
                                                                        <WithStyles(undefined) center={false}>
                                                                          <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                            <span className=\\"MuiTouchRipple-root\\">
                                                                              <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                            </span>
                                                                          </ForwardRef(TouchRipple)>
                                                                        </WithStyles(undefined)>
                                                                      </NoSsr>
                                                                    </a>
                                                                  </LinkAnchor>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                  </div>
                                </ForwardRef(Grid)>
                              </WithStyles(ForwardRef(Grid))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                      </div>
                    </ForwardRef(Grid)>
                  </WithStyles(ForwardRef(Grid))>
                </div>
              </ForwardRef(Container)>
            </WithStyles(ForwardRef(Container))>
          </DashboardComponent>
        </WithStyles(DashboardComponent)>
      </Connect(WithStyles(DashboardComponent))>
    </Provider>
  </Router>
</BrowserRouter>"
`;

exports[`Dashboard matches snapshot with two accounts in a different currency 1`] = `
"<BrowserRouter>
  <Router history={{...}}>
    <Provider store={{...}}>
      <Connect(WithStyles(DashboardComponent)) history={{...}}>
        <WithStyles(DashboardComponent) history={{...}} accounts={{...}} settings={{...}} totalBalance={2500} dispatch={[Function: dispatch]}>
          <DashboardComponent classes={{...}} history={{...}} accounts={{...}} settings={{...}} totalBalance={2500} dispatch={[Function: dispatch]}>
            <WithStyles(ForwardRef(Container))>
              <ForwardRef(Container) classes={{...}}>
                <div className=\\"MuiContainer-root MuiContainer-maxWidthLg\\">
                  <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                    <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                      <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                                <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                                    <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                        <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                          Total
                                        </p>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                        <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                          €2,500.00
                                        </h5>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                          <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                            <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                              <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                                <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                  <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                                </svg>
                                              </ForwardRef(SvgIcon)>
                                            </WithStyles(ForwardRef(SvgIcon))>
                                          </ForwardRef>
                                        </div>
                                      </ForwardRef(Paper)>
                                    </WithStyles(ForwardRef(Paper))>
                                  </div>
                                </ForwardRef(Paper)>
                              </WithStyles(ForwardRef(Paper))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                                <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={4}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={4}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4\\" />
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={4}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={4}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4\\">
                                          <withRouter(AccountsTable) filter=\\"Assets\\">
                                            <AccountsTable filter=\\"Assets\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-224\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-224\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-224 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-225\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-225\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-225 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Assets
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €0.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <div className=\\"makeStyles-newAccountButton-233\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <LinkAnchor className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" navigate={[Function: navigate]}>
                                                                    <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" onClick={[Function: onClick]}>
                                                                      <span className=\\"MuiButton-label\\">
                                                                        New account
                                                                      </span>
                                                                      <NoSsr>
                                                                        <WithStyles(undefined) center={false}>
                                                                          <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                            <span className=\\"MuiTouchRipple-root\\">
                                                                              <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                            </span>
                                                                          </ForwardRef(TouchRipple)>
                                                                        </WithStyles(undefined)>
                                                                      </NoSsr>
                                                                    </a>
                                                                  </LinkAnchor>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={4}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={4}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4\\">
                                          <withRouter(AccountsTable) filter=\\"Liabilities\\">
                                            <AccountsTable filter=\\"Liabilities\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-224\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-224\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-224 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-225\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-225\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-225 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Liabilities
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €0.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <div className=\\"makeStyles-newAccountButton-233\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <LinkAnchor className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" navigate={[Function: navigate]}>
                                                                    <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\" onClick={[Function: onClick]}>
                                                                      <span className=\\"MuiButton-label\\">
                                                                        New account
                                                                      </span>
                                                                      <NoSsr>
                                                                        <WithStyles(undefined) center={false}>
                                                                          <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                            <span className=\\"MuiTouchRipple-root\\">
                                                                              <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                            </span>
                                                                          </ForwardRef(TouchRipple)>
                                                                        </WithStyles(undefined)>
                                                                      </NoSsr>
                                                                    </a>
                                                                  </LinkAnchor>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                  </div>
                                </ForwardRef(Grid)>
                              </WithStyles(ForwardRef(Grid))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                      </div>
                    </ForwardRef(Grid)>
                  </WithStyles(ForwardRef(Grid))>
                </div>
              </ForwardRef(Container)>
            </WithStyles(ForwardRef(Container))>
          </DashboardComponent>
        </WithStyles(DashboardComponent)>
      </Connect(WithStyles(DashboardComponent))>
    </Provider>
  </Router>
</BrowserRouter>"
`;
